# vybe-backend

./: .env  .gitignore  Cargo.toml  README.md
.spotify_cache/: bDfLBtsSzPY7WyyQixSpCvwaRUAWu7CcbmleSkW96Yoa2Ev458OZlpcqgwLkLDWB
src/: auth.rs  main.rs  old_main.rs  oldoldmain.rs
templates/: error.html.tera
