[package]
name = "vybe-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
express = "0.0.2"
http = "0.2.6"
querystring = "1.1.0"
rocket = "0.5.0-rc.1" #it's yelling at nothing shhhhh
# request = "0.0.8" this bitchass don't work
