[package]
name = "vybe-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
express = "0.0.2"
http = "0.2.6"
querystring = "1.1.0"
rocket = "0.5.0-rc.1" #it's yelling at nothing shhhhh
rspotify = { version = "0.11.3",default-features = false, features = ["client-ureq", "ureq-rustls-tls", "env-file", "cli"]}
dotenv = "0.15.0"
tokio = "1.16.1"
# request = "0.0.8" this bitchass don't work
