[package]
name = "vybe-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

express = "0.0.2"
http = "0.2.6"
querystring = "1.1.0"
rocket = "0.4.10" #it's yelling at nothing shhhhh
rspotify = { version = "0.11.3", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
dotenv = "0.15.0"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
getrandom = "0.2.0"



# request = "0.0.8" this bitchass don't work
